# filefloat-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  fileFloat.ts  global.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/everything/: Everything-FileFloat.ini
src-tauri/src/: main.rs
